--- a/BlazeProxy.toml
+++ b/BlazeProxy.toml
@@ -1,2 +1,6 @@
 local_bind = "0.0.0.0:25565"       # Where does the BlazeProxy listen to
-forward_to = "127.0.0.1:10123"     # Where will it forward to
+default_server = "lobby"           # Default server to connect to
+
+[servers]
+lobby = { ip = "127.0.0.1:10123" }
+survival = { ip = "127.0.0.1:25585" }
